aligned the arrows correctly

--- a/popup.css
+++ b/popup.css
@@ -19,11 +19,10 @@ overflow:hidden;
 section h1{
  font-weight:bold;
  font-size:0.9em;
- width:80%
 }
 
 #prev, #next, h1{
- 
+  float:left;
   text-align:center;
 }
 h1{
@@ -31,6 +30,7 @@ h1{
 }
 #next{
 background-image:url('img/next.png');
+float:right;
 }
 #prev{
  background-image:url('img/prev.png');
